--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,14 @@
 {
     "root": true,
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "extends": ["eslint:recommended", "prettier"],
+    "parser": "@typescript-eslint/parser",
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
     "env": {
         "es2021": true,
         "node": true
-    }
+    },
+    "plugins": ["@typescript-eslint"]
 }
